// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpringValue can animate a number 1`] = `
Array [
  0.100002,
  0.200004,
  0.300006,
  0.400008,
  0.50001,
  0.600012,
  0.700014,
  0.800016,
  0.900018,
  1,
]
`;

exports[`SpringValue can animate a string 1`] = `
Array [
  "1.00002px 2.00004px",
  "2.00004px 4.00008px",
  "3.00006px 6.00012px",
  "4.00008px 8.00016px",
  "5.0001px 10.0002px",
  "6.00012px 12.00024px",
  "7.00014px 14.00028px",
  "8.00016px 16.00032px",
  "9.00018px 18.00036px",
  "10px 20px",
]
`;

exports[`SpringValue can animate an array of numbers 1`] = `
Array [
  Array [
    1.00002,
    2.00004,
  ],
  Array [
    2.00004,
    4.00008,
  ],
  Array [
    3.00006,
    6.00012,
  ],
  Array [
    4.00008,
    8.00016,
  ],
  Array [
    5.0001,
    10.0002,
  ],
  Array [
    6.00012,
    12.00024,
  ],
  Array [
    7.00014,
    14.00028,
  ],
  Array [
    8.00016,
    16.00032,
  ],
  Array [
    9.00018,
    18.00036,
  ],
  Array [
    10,
    20,
  ],
]
`;

exports[`SpringValue the "loop" prop can be combined with the "reverse" prop 1`] = `
Array [
  0.33334,
  0.66668,
  1,
  0.66666,
  0.33331999999999995,
  0,
  0.33334,
  0.66668,
  1,
]
`;

exports[`SpringValue the "loop" prop resets the animation once finished 1`] = `
Array [
  0.33334,
  0.66668,
  1,
]
`;

exports[`SpringValue when "reverse" prop is true swaps the "to" and "from" props 1`] = `
Array [
  0.9773651566921419,
  0.9238447110500605,
  0.852727045431224,
  0.7732066706218559,
  0.6914946808396315,
  0.6116475578389905,
  0.5361828794607453,
  0.4665342551963084,
  0.4033853476869672,
  0.3469132819682177,
  0.29696442635758724,
  0.2531799342583708,
  0.21508416627703766,
  0.18214585932574526,
  0.15381943659801983,
  0.1295719767229399,
  0.10889994138353111,
  0.09133869011601468,
  0.07646700587939456,
  0.06390825164952882,
  0.05332932801191841,
  0.0444382672440135,
  0.03698105225497496,
  0.030738067326888108,
  0.02552045540916056,
  0.02116656126728198,
  0.01753857162892271,
  0.014519415475703344,
  0.012009954436804516,
  0.009926470833638602,
  0.008198446305043062,
  0.006766614882944518,
  0.005581269243973591,
  0.0046007964253405855,
  0.0037904186834741348,
  0.003121115756173977,
  0.0025687061097373425,
  0.002113066492326755,
  0.0017374710529361444,
  0.0014280332726546588,
  0.001173235894326376,
  0,
]
`;

exports[`SpringValue when "reverse" prop is true works when "from" was set by an earlier update 1`] = `
Array [
  0.9773651566921419,
  0.9238447110500605,
  0.852727045431224,
  0.7732066706218559,
  0.6914946808396315,
  0.6116475578389905,
  0.5361828794607453,
  0.4665342551963084,
  0.4033853476869672,
  0.3469132819682177,
  0.29696442635758724,
  0.2531799342583708,
  0.21508416627703766,
  0.18214585932574526,
  0.15381943659801983,
  0.1295719767229399,
  0.10889994138353111,
  0.09133869011601468,
  0.07646700587939456,
  0.06390825164952882,
  0.05332932801191841,
  0.0444382672440135,
  0.03698105225497496,
  0.030738067326888108,
  0.02552045540916056,
  0.02116656126728198,
  0.01753857162892271,
  0.014519415475703344,
  0.012009954436804516,
  0.009926470833638602,
  0.008198446305043062,
  0.006766614882944518,
  0.005581269243973591,
  0.0046007964253405855,
  0.0037904186834741348,
  0.003121115756173977,
  0.0025687061097373425,
  0.002113066492326755,
  0.0017374710529361444,
  0.0014280332726546588,
  0.001173235894326376,
  0,
]
`;

exports[`SpringValue when "reverse" prop is true works when "to" and "from" were set by an earlier update 1`] = `
Array [
  0.022634843307857987,
  0.07615528894993949,
  0.14727295456877587,
  0.226793329378144,
  0.30850531916036833,
  0.3883524421610094,
  0.4638171205392546,
  0.5334657448036914,
  0.5739798090051748,
  0.5769314290818427,
  0.5557626190736369,
  0.5200267363634852,
  0.4764105145625939,
  0.4295016985132453,
  0.38236344286272556,
  0.3369622784733687,
  0.29448540630343617,
  0.25557459185220316,
  0.22049742047819276,
  0.18927168260884208,
  0.16175483826511933,
  0.1377075920817319,
  0.11683838434304501,
  0.0988339093960519,
  0.08337948597437063,
  0.07017212884873279,
  0.05892843425047188,
  0.049388836173825494,
  0.041319373575113914,
  0.03451179641037492,
  0.028782605949931907,
  0.023971452443943598,
  0.019939186165186966,
  0.016565764841941392,
  0.013748152945448568,
  0.011398299719529353,
  0.009441248327067157,
  0.007813404341311832,
  0.006460975252106907,
  0.005338581610289848,
  0.004408033349647206,
  0.00363726055737456,
  0.0029993856652006856,
  0.0024719230850121722,
  0.002036092265339304,
  0.0016762306751292224,
  0.0013792940991652848,
  0.001134432694629231,
  0.0009326324005005715,
  0.0007664124372832261,
  0.0006295707368567502,
  0,
]
`;

exports[`SpringValue when "to" prop equals current value avoids interrupting an active animation 1`] = `
Array [
  0.022634843307857987,
  0.05403278177365278,
  0.07284142865128296,
  0.0828538750595177,
  0.086845421255966,
  0.08683009255947671,
  0.0842549750547836,
  0.08014705211134462,
  0.0752238210530826,
  0.06997634488902708,
  0.06473137113972319,
  0.059697592148462514,
  0.05499992314855915,
  0.050704753857468414,
  0.04683842305057004,
  0.04340062433783876,
  0.040374037257053644,
  0.03773116146592327,
  0.03543909060575714,
  0.033462778841422576,
  0.031767213683302126,
  0.030318803092499735,
  0.029086205080955534,
  0.028040767912793738,
  0.022634843307857987,
]
`;

exports[`SpringValue when our target is an Interpolation when animating a string animates as expected 1`] = `
Array [
  "rgba(255, 170, 0, 1)",
  "rgba(255, 85, 0, 1)",
  "red",
  "rgba(255, 85, 0, 1)",
  "rgba(255, 170, 0, 1)",
  "yellow",
  "rgba(255, 170, 0, 1)",
  "rgba(255, 85, 0, 1)",
  "red",
  "rgba(255, 85, 0, 1)",
  "rgba(255, 170, 0, 1)",
  "yellow",
]
`;

exports[`SpringValue when our target is another SpringValue when animating a string animates as expected 1`] = `
Array [
  "rgba(255, 170, 0, 1)",
  "rgba(255, 85, 0, 1)",
  "red",
  "rgba(255, 85, 0, 1)",
  "rgba(255, 170, 0, 1)",
  "yellow",
  "rgba(255, 170, 0, 1)",
  "rgba(255, 85, 0, 1)",
  "red",
  "rgba(255, 85, 0, 1)",
  "rgba(255, 170, 0, 1)",
  "yellow",
]
`;
